@@ -30,3 +30,4 @@
 * Added `uuid_clock`, a `<chrono>`-compatible clock with an epoch and a resolution as specified in RFC 4122.
 * Accessors for the timestamp, the time point, the clock sequence, and the node identifier have been added to `uuid`.
 * Improved the `what()` strings of the `std::runtime_error` exceptions thrown by `string_generator`.
+* Added an overload of `to_chars` taking `wchar_t* first, wchar_t* last`.
